--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 html {
     font-size: 16px;
 }
@@ -46,17 +47,13 @@ h6 {
 
 body {
     margin: 0;
-    font-family: "Quicksand", sans-serif;
-}
-
-span {
-    font-family: "Inspiration", cursive;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
 /* Clear floats after the columns */
 
-.row:after {
+.row-c:after {
     content: "";
     display: table;
     clear: both;
@@ -106,7 +103,6 @@ span {
 .main {
     height: 100vh;
     background-color: rgb(15, 15, 15);
-    overflow: hidden;
     padding-left: 5%;
     padding-right: 20%;
 }
@@ -128,6 +124,20 @@ span {
     color: rgb(236, 236, 236);
 }
 
+span {
+    font-family: 'Special Elite', cursive;
+}
+
+img {
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+}
+
+.padding-s {
+    padding: 1%;
+}
+
 @media only screen and (max-width: 800px) {
     /* column-2 pasará de tener 50% a 100% */
     .column-2 {
@@ -135,7 +145,7 @@ span {
     }
     /* column-3 pasará de tener 33.33% a 100% */
     .column-3 {
-        width: 100%;
+        width: 50%;
     }
     /* column-4 pasará de tener 25% a 50% */
     .column-4 {
@@ -144,12 +154,19 @@ span {
 }
 
 @media only screen and (max-width: 400px) {
-    /* clases */
+    html {
+        font-size: 13px;
+    }
     .main {
         padding-left: 5%;
         padding-right: 5%;
     }
-    html {
-        font-size: 13px;
+    .column-3 {
+        width: 100%;
+        padding: 0;
+        margin-bottom: 10%;
+    }
+    .column-3 img {
+        height: 60vw;
     }
 }
